Quick fix with wrong image display on Firefox

--- a/src/baguetteBox.scss
+++ b/src/baguetteBox.scss
@@ -26,8 +26,8 @@
             display: inline-block;
             position: relative;
             margin: 0;
-            max-height: 100%;
-            max-width: 100%;
+            height: 100%;
+            width: 100%;
         }
 
         img {
